<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/nome"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_aqui">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/cpf"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/xxx_xxx_xxx_xx">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/data_de_nascimento"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dd_mm_yyyy">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/uf"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/telefones_separados_por_virgula"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_11_1111_1111">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
